# review_object_detection_metrics

./: pyproject.toml  setup.py
src/odmetrics/: bounding_box.py
src/odmetrics/evaluators/: coco_evaluator.py  pascal_voc_evaluator.py  tube_evaluator.py
src/odmetrics/utils/: converter.py  general_utils.py  validations.py
tests/: test_converter.py  test_eval_coco.py  test_eval_pascal.py  test_formats.py
